syntax = "proto3";

package xyz.block.ftl.provisioner.v1beta1;

import "xyz/block/ftl/artefacts/v1/artefacts.proto";
import "xyz/block/ftl/schema/v1/schema.proto";

option go_package = "github.com/TBD54566975/ftl/backend/protos/xyz/block/ftl/provisioner/v1beta1;provisionerpb";
option java_multiple_files = true;

// Resource is an abstract resource extracted from FTL Schema.
message Resource {
  // id unique within the module
  string resource_id = 1;

  oneof resource {
    PostgresResource postgres = 102;
    MysqlResource mysql = 103;
    ModuleResource module = 104;
    SqlMigrationResource sql_migration = 105;
    TopicResource topic = 106;
    SubscriptionResource subscription = 107;
    RunnerResource runner = 108;
  }
}

// Resource types
//
// any output created by the provisioner is stored in a field called "output"

message PostgresResource {
  ftl.schema.v1.DatabaseRuntime output = 1;
}

message MysqlResource {
  ftl.schema.v1.DatabaseRuntime output = 1;
}

message SqlMigrationResource {
  message SqlMigrationResourceOutput {}
  SqlMigrationResourceOutput output = 1;
  string digest = 2;
}

message ModuleResource {
  message ModuleResourceOutput {
    string deployment_key = 1;
  }
  ModuleResourceOutput output = 1;

  ftl.schema.v1.Module schema = 2;
  repeated artefacts.v1.DeploymentArtefact artefacts = 3;
}

message RunnerResource {
  message RunnerResourceOutput {
    string runner_uri = 1;
    string deployment_key = 2;
  }
  RunnerResourceOutput output = 1;
}

message TopicResource {
  message TopicResourceOutput {
    repeated string kafka_brokers = 1;
    string topic_id = 2;
  }

  TopicResourceOutput output = 1;
}

message SubscriptionResource {
  message SubscriptionResourceOutput {
    repeated string kafka_brokers = 1;
    string topic_id = 2;
    string consumer_group_id = 3;
  }
  SubscriptionResourceOutput output = 1;

  ftl.schema.v1.Ref topic = 2;
}
